...
    <string name="browser_location_group_title">%1$s (%2$d)</string>
    <string name="browser_locations_show_all">Show all (%1$d)</string>
    <plurals name="browser_clipboard_summary">
        <item quantity="one">%1$d item (%2$s)</item>
        <item quantity="other">%1$d items (%2$s)</item>
    </plurals>
    <string name="content_desc_sessions">Sessions</string>
    <string name="content_desc_refresh">Refresh</string>
    <string name="content_desc_sort">Sort</string>
    <string name="content_desc_more">More</string>
    <string name="content_desc_more_selection_actions">More selection actions</string>
    <string name="content_desc_more_options_named">More options for %1$s</string>
    <string name="content_desc_copy">Copy</string>
...
